--- a/node/package.json
+++ b/node/package.json
@@ -6,6 +6,14 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-  	"start": "nodemon index.js"
+    "start": "nodemon index.js"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.4",
+    "express-session": "^1.16.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "pg-promise": "^8.6.5"
   }
 }
