--- a/node/package.json
+++ b/node/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
+    "express": "^4.16.4",
     "express-session": "^1.16.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg-promise": "^8.6.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
