--- a/node/package.json
+++ b/node/package.json
@@ -15,7 +15,8 @@
     "express-session": "^1.16.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pg-promise": "^8.6.5"
+    "pg-promise": "^8.6.5",
+    "properties-reader": "^0.0.16"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
