--- a/node/package.json
+++ b/node/package.json
@@ -16,7 +16,8 @@
     "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pg-promise": "^8.6.5"
+    "pg-promise": "^8.6.5",
+    "rimraf": "^2.6.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
