--- a/node/package.json
+++ b/node/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "multer": "^1.4.1",
+    "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg-promise": "^8.6.5",
